--- a/firmware/phoenix_drive/platformio.ini
+++ b/firmware/phoenix_drive/platformio.ini
@@ -8,11 +8,9 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:uno_r4_minima]
-platform = renesas-ra
-board = uno_r4_minima
+[env:pro16MHzatmega328]
+platform = atmelavr
+board = pro16MHzatmega328
 framework = arduino
-platform_packages =
-  toolchain-gccarmnoneeabi@~1.90301.200702
-lib_deps =
-  alexandrehiroyuki/MovingAveragePlus@^4.4.1
+upload_port = /dev/ttyUSB0
+upload_protocol = stk500
