--- a/config/slam.yaml
+++ b/config/slam.yaml
@@ -14,12 +14,12 @@ slam_toolbox:
     map_frame: map
     base_frame: base_link
     scan_topic: /scan
-    mode: mapping #localization
+    mode: localization
 
     # if you'd like to immediately start continuing a map at a given pose
     # or at the dock, but they are mutually exclusive, if pose is given
     # will use pose
-    #map_file_name: /home/pi/ros2_ws/src/omni_bot/maps/my_map_serial
+    map_file_name: /home/pi/17_7_map
     map_start_pose: [0.0, 0.0, 0.0]
     #map_start_at_dock: true
 
@@ -28,7 +28,7 @@ slam_toolbox:
     transform_publish_period: 0.02 #if 0 never publishes odometry
     map_update_interval: 5.0
     resolution: 0.05
-    max_laser_range: 20.0 #for rastering images
+    max_laser_range: 12.0 #for rastering images
     minimum_time_interval: 0.5
     transform_timeout: 0.2
     tf_buffer_duration: 30.
