--- a/config/nav2_mppi.yaml
+++ b/config/nav2_mppi.yaml
@@ -2,7 +2,7 @@ bt_navigator:
   ros__parameters:
     use_sim_time: false
     global_frame: map
-    robot_base_frame: base_link
+    robot_base_frame: base_footprint
     odom_topic: odom
     bt_loop_duration: 10
     default_server_timeout: 20
@@ -77,8 +77,8 @@ controller_server:
       # Rotation shim controller
       angular_dist_threshold: 0.785
       forward_sampling_distance: 0.5
-      rotate_to_heading_angular_vel: 1.8
-      max_angular_accel: 3.2
+      rotate_to_heading_angular_vel: 0.1
+      max_angular_accel: 10.0
       simulate_ahead_time: 1.0
 
       # MPPI controller
@@ -91,14 +91,14 @@ controller_server:
       vx_max: 0.3
       vx_min: -0.3
       vy_max: 0.3
-      wz_max: 1.0
+      wz_max: 0.2
       iteration_count: 1
       prune_distance: 1.7
       transform_tolerance: 0.1
       temperature: 0.3
       gamma: 0.015
       motion_model: "Omni"
-      visualize: True
+      visualize: False
       reset_period: 1.0 # (only in Humble)
       regenerate_noises: false
       TrajectoryVisualizer:
@@ -169,18 +169,18 @@ local_costmap:
       update_frequency: 5.0
       publish_frequency: 2.0
       global_frame: odom
-      robot_base_frame: base_link
+      robot_base_frame: base_footprint
       use_sim_time: false
       rolling_window: true
       width: 3
       height: 3
-      resolution: 0.06
+      resolution: 0.1
       footprint: "[ [0.23, 0.22], [0.23, -0.22], [-0.23, -0.22], [-0.23, 0.22] ]"
       plugins: ["static_layer", "voxel_layer", "inflation_layer"]
       inflation_layer:
         plugin: "nav2_costmap_2d::InflationLayer"
-        cost_scaling_factor: 4.0
-        inflation_radius: 0.35
+        cost_scaling_factor: 5.0
+        inflation_radius: 0.2
       voxel_layer:
         plugin: "nav2_costmap_2d::VoxelLayer"
         enabled: True
@@ -212,10 +212,10 @@ global_costmap:
       update_frequency: 1.0
       publish_frequency: 1.0
       global_frame: map
-      robot_base_frame: base_link
+      robot_base_frame: base_footprint
       use_sim_time: false
-      footprint: "[ [0.175, 0.16], [-0.175, 0.16], [-0.175, -0.16], [0.175, -0.16] ]"
-      resolution: 0.06
+      footprint: "[ [0.23, 0.22], [0.23, -0.22], [-0.23, -0.22], [-0.23, 0.22] ]"
+      resolution: 0.05
       track_unknown_space: true
       plugins: ["static_layer", "obstacle_layer", "inflation_layer"]
       obstacle_layer:
@@ -238,7 +238,7 @@ global_costmap:
       inflation_layer:
         plugin: "nav2_costmap_2d::InflationLayer"
         cost_scaling_factor: 3.0
-        inflation_radius: 1.75
+        inflation_radius: 0.2
       always_send_full_costmap: True
 
 planner_server:
@@ -300,7 +300,7 @@ behavior_server:
     assisted_teleop:
       plugin: "nav2_behaviors/AssistedTeleop"
     global_frame: map
-    robot_base_frame: base_link
+    robot_base_frame: base_footprint
     transform_tolerance: 0.1
     use_sim_time: false
     simulate_ahead_time: 2.0
@@ -329,10 +329,10 @@ velocity_smoother:
     smoothing_frequency: 20.0
     scale_velocities: False
     feedback: "OPEN_LOOP"
-    max_velocity: [0.15, 0.0, 0.3]
-    min_velocity: [-0.15, 0.0, -0.3]
-    max_accel: [0.3, 0.3, 0.3]
-    max_decel: [-0.3, -0.3, -0.3]
+    max_velocity: [0.15, 0.0, 0.2]
+    min_velocity: [-0.15, 0.0, -0.2]
+    max_accel: [0.3, 0.3, 6.0]
+    max_decel: [-0.3, -0.3, -6.0]
     odom_topic: "odom"
     odom_duration: 0.1
     deadband_velocity: [0.0, 0.0, 0.0]
