--- a/config/nav2_params.yaml
+++ b/config/nav2_params.yaml
@@ -2,7 +2,7 @@ bt_navigator:
   ros__parameters:
     use_sim_time: false
     global_frame: map
-    robot_base_frame: base_link
+    robot_base_frame: base_footprint
     odom_topic: /odom
     bt_loop_duration: 10
     default_server_timeout: 20
@@ -92,36 +92,36 @@ controller_server:
     general_goal_checker:
       stateful: True
       plugin: "nav2_controller::SimpleGoalChecker"
-      xy_goal_tolerance: 0.25
-      yaw_goal_tolerance: 0.25
+      xy_goal_tolerance: 0.2
+      yaw_goal_tolerance: 0.15
     # DWB parameters
     FollowPath:
       plugin: "dwb_core::DWBLocalPlanner"
       debug_trajectory_details: True
-      min_vel_x: 0.0
-      min_vel_y: 0.0
+      min_vel_x: -0.17
+      min_vel_y: -0.17
       max_vel_x: 0.17
       max_vel_y: 0.17
-      max_vel_theta: 1.0
-      min_speed_xy: 0.0
+      max_vel_theta: 0.17
+      min_speed_xy: -0.17
       max_speed_xy: 0.17
-      min_speed_theta: 0.0
+      min_speed_theta: -0.17
       # Add high threshold velocity for turtlebot 3 issue.
       # https://github.com/ROBOTIS-GIT/turtlebot3_simulations/issues/75
-      acc_lim_x: 0.3
-      acc_lim_y: 0.3
-      acc_lim_theta: 0.3
-      decel_lim_x: -0.3
-      decel_lim_y: -0.3
-      decel_lim_theta: -0.3
+      acc_lim_x: 1.0
+      acc_lim_y: 1.0
+      acc_lim_theta: 1.0
+      decel_lim_x: -1.0
+      decel_lim_y: -1.0
+      decel_lim_theta: -1.0
       vx_samples: 20
-      vy_samples: 5
+      vy_samples: 20
       vtheta_samples: 20
-      sim_time: 1.7
+      sim_time: 4.0  #1.7 5 works
       linear_granularity: 0.05
       angular_granularity: 0.025
       transform_tolerance: 0.2
-      xy_goal_tolerance: 0.25
+      xy_goal_tolerance: 0.2
       trans_stopped_velocity: 0.25
       short_circuit_trajectory_evaluation: True
       stateful: True
@@ -143,7 +143,7 @@ local_costmap:
       update_frequency: 5.0
       publish_frequency: 2.0
       global_frame: odom
-      robot_base_frame: base_link
+      robot_base_frame: base_footprint
       use_sim_time: false
       rolling_window: true
       width: 3
@@ -154,8 +154,8 @@ local_costmap:
       plugins: ["voxel_layer", "inflation_layer"]
       inflation_layer:
         plugin: "nav2_costmap_2d::InflationLayer"
-        cost_scaling_factor: 3.0
-        inflation_radius: 0.25
+        cost_scaling_factor: 4.0
+        inflation_radius: 0.2
       voxel_layer:
         plugin: "nav2_costmap_2d::VoxelLayer"
         enabled: True
@@ -187,7 +187,7 @@ global_costmap:
       update_frequency: 1.0
       publish_frequency: 1.0
       global_frame: map
-      robot_base_frame: base_link
+      robot_base_frame: base_footprint
       use_sim_time: false
       #robot_radius: 0.22
       footprint: "[ [0.23, 0.22], [0.23, -0.22], [-0.23, -0.22], [-0.23, 0.22] ]"
@@ -213,8 +213,8 @@ global_costmap:
         map_subscribe_transient_local: True
       inflation_layer:
         plugin: "nav2_costmap_2d::InflationLayer"
-        cost_scaling_factor: 3.0
-        inflation_radius: 0.25
+        cost_scaling_factor: 5.0
+        inflation_radius: 0.2
       always_send_full_costmap: True
 
 map_server:
@@ -270,12 +270,12 @@ behavior_server:
     assisted_teleop:
       plugin: "nav2_behaviors/AssistedTeleop"
     global_frame: odom
-    robot_base_frame: base_link
+    robot_base_frame: base_footprint
     transform_tolerance: 0.1
     use_sim_time: false
     simulate_ahead_time: 2.0
-    max_rotational_vel: 1.0
-    min_rotational_vel: 0.2
+    max_rotational_vel: 0.4
+    min_rotational_vel: -0.4
     rotational_acc_lim: 3.2
 
 robot_state_publisher:
@@ -299,10 +299,10 @@ velocity_smoother:
     smoothing_frequency: 20.0
     scale_velocities: False
     feedback: "OPEN_LOOP"
-    max_velocity: [0.15, 0.0, 2.0]
-    min_velocity: [-0.15, 0.0, -2.0]
-    max_accel: [0.3, 0.3, 0.3]
-    max_decel: [-0.3, -0.3, -0.3]
+    max_velocity: [0.15, 0.0, 0.4]
+    min_velocity: [-0.15, 0.0, -0.4]
+    max_accel: [0.5, 0.5, 0.5]
+    max_decel: [-0.5, -0.5, -0.5]
     odom_topic: "odom"
     odom_duration: 0.1
     deadband_velocity: [0.0, 0.0, 0.0]
