--- a/config/nav2_params.yaml
+++ b/config/nav2_params.yaml
@@ -69,9 +69,9 @@ bt_navigator_navigate_to_pose_rclcpp_node:
 controller_server:
   ros__parameters:
     use_sim_time: false
-    controller_frequency: 10.0 # was 20
+    controller_frequency: 30.0 # was 20
     min_x_velocity_threshold: 0.001
-    min_y_velocity_threshold: 0.5
+    min_y_velocity_threshold: 0.005
     min_theta_velocity_threshold: 0.001
     failure_tolerance: 0.3
     progress_checker_plugin: "progress_checker"
@@ -150,12 +150,12 @@ local_costmap:
       height: 3
       resolution: 0.05
       #robot_radius: 0.22
-      footprint: "[ [0.23, 0.22], [0.23, -0.22], [-0.23, -0.22], [-0.23, 0.22] ]"
-      plugins: ["voxel_layer", "inflation_layer"]
+      footprint: "[ [0.24, 0.24], [0.24, -0.24], [-0.24, -0.24], [-0.24, 0.24] ]"
+      plugins: ["static_layer","voxel_layer", "inflation_layer"]
       inflation_layer:
         plugin: "nav2_costmap_2d::InflationLayer"
-        cost_scaling_factor: 4.0
-        inflation_radius: 0.25
+        cost_scaling_factor: 10.0
+        inflation_radius: 0.2
       voxel_layer:
         plugin: "nav2_costmap_2d::VoxelLayer"
         enabled: True
@@ -190,7 +190,7 @@ global_costmap:
       robot_base_frame: base_footprint
       use_sim_time: false
       #robot_radius: 0.22
-      footprint: "[ [0.23, 0.22], [0.23, -0.22], [-0.23, -0.22], [-0.23, 0.22] ]"
+      footprint: "[ [0.24, 0.24], [0.24, -0.24], [-0.24, -0.24], [-0.24, 0.24] ]"
       resolution: 0.05
       track_unknown_space: true
       plugins: ["static_layer", "obstacle_layer", "inflation_layer"]
@@ -213,8 +213,8 @@ global_costmap:
         map_subscribe_transient_local: True
       inflation_layer:
         plugin: "nav2_costmap_2d::InflationLayer"
-        cost_scaling_factor: 5.0
-        inflation_radius: 0.2
+        cost_scaling_factor: 10.0
+        inflation_radius: 0.25
       always_send_full_costmap: True
 
 map_server:
@@ -258,7 +258,7 @@ behavior_server:
     costmap_topic: local_costmap/costmap_raw
     footprint_topic: local_costmap/published_footprint
     cycle_frequency: 10.0
-    behavior_plugins: ["spin", "backup", "drive_on_heading", "assisted_teleop", "wait"]
+    behavior_plugins: ["spin", "drive_on_heading","backup",  "assisted_teleop", "wait"]
     spin:
       plugin: "nav2_behaviors/Spin"
     backup:
@@ -274,8 +274,8 @@ behavior_server:
     transform_tolerance: 0.1
     use_sim_time: false
     simulate_ahead_time: 2.0
-    max_rotational_vel: 0.4
-    min_rotational_vel: -0.4
+    max_rotational_vel: 0.2
+    min_rotational_vel: -0.2
     rotational_acc_lim: 3.2
 
 robot_state_publisher:
@@ -299,8 +299,8 @@ velocity_smoother:
     smoothing_frequency: 20.0
     scale_velocities: False
     feedback: "OPEN_LOOP"
-    max_velocity: [0.15, 0.0, 0.4]
-    min_velocity: [-0.15, 0.0, -0.4]
+    max_velocity: [0.17, 0.017, 0.4]
+    min_velocity: [-0.17, -0.17, -0.4]
     max_accel: [0.5, 0.5, 0.5]
     max_decel: [-0.5, -0.5, -0.5]
     odom_topic: "odom"
