--- a/config/slam.yaml
+++ b/config/slam.yaml
@@ -14,12 +14,12 @@ slam_toolbox:
     map_frame: map
     base_frame: base_footprint
     scan_topic: /scan
-    mode: localization
+    mode: mapping #localization
 
     # if you'd like to immediately start continuing a map at a given pose
     # or at the dock, but they are mutually exclusive, if pose is given
     # will use pose
-    map_file_name: /home/pi/20_7_jul
+    #map_file_name: /home/pi/20_7_jul
     map_start_pose: [0.0, 0.0, 0.0]
     #map_start_at_dock: true
 
@@ -29,6 +29,7 @@ slam_toolbox:
     map_update_interval: 5.0
     resolution: 0.05
     max_laser_range: 12.0 #for rastering images
+    min_laser_range: 0.2
     minimum_time_interval: 0.5
     transform_timeout: 0.2
     tf_buffer_duration: 30.
