--- a/config/nav2_mppi.yaml
+++ b/config/nav2_mppi.yaml
@@ -133,21 +133,21 @@ controller_server:
         collision_cost: 10000.0
         collision_margin_distance: 0.1
         near_goal_distance: 0.5
-        inflation_radius: 0.35 # (only in Humble)
+        inflation_radius: 0.4 # (only in Humble)
         cost_scaling_factor: 10.0 # (only in Humble)
       PathAlignCritic:
         enabled: true
         cost_power: 1
-        cost_weight: 10.0
-        max_path_occupancy_ratio: 0.05
+        cost_weight: 15.0
+        max_path_occupancy_ratio: 0.07
         trajectory_point_step: 3
         threshold_to_consider: 0.5
         offset_from_furthest: 20
-        use_path_orientations: True
+        use_path_orientations: true
       PathFollowCritic:
         enabled: true
         cost_power: 1
-        cost_weight: 12.0
+        cost_weight: 20.0
         offset_from_furthest: 5
         threshold_to_consider: 1.4
       PathAngleCritic:
@@ -175,12 +175,12 @@ local_costmap:
       width: 3
       height: 3
       resolution: 0.05
-      footprint: "[ [0.23, 0.22], [0.23, -0.22], [-0.23, -0.22], [-0.23, 0.22] ]"
+      footprint: "[ [0.25, 0.28], [0.25, -0.28], [-0.25, -0.28], [-0.25, 0.28] ]"
       plugins: ["static_layer", "voxel_layer", "inflation_layer"]
       inflation_layer:
         plugin: "nav2_costmap_2d::InflationLayer"
         cost_scaling_factor: 10.0
-        inflation_radius: 0.3
+        inflation_radius: 0.2
       voxel_layer:
         plugin: "nav2_costmap_2d::VoxelLayer"
         enabled: True
@@ -213,8 +213,8 @@ global_costmap:
       publish_frequency: 1.0
       global_frame: map
       robot_base_frame: base_footprint
-      use_sim_time: false
-      footprint: "[ [0.23, 0.22], [0.23, -0.22], [-0.23, -0.22], [-0.23, 0.22] ]"
+      use_sim_time: false      
+      footprint: "[ [0.25, 0.28], [0.25, -0.28], [-0.25, -0.28], [-0.25, 0.28] ]"
       resolution: 0.05
       track_unknown_space: true
       plugins: ["static_layer", "obstacle_layer", "inflation_layer"]
@@ -238,7 +238,7 @@ global_costmap:
       inflation_layer:
         plugin: "nav2_costmap_2d::InflationLayer"
         cost_scaling_factor: 10.0
-        inflation_radius: 0.35
+        inflation_radius: 0.25
       always_send_full_costmap: True
 
 planner_server:
@@ -258,7 +258,7 @@ planner_server:
       reverse_penalty: 2.0                # Penalty to apply if motion is reversing, must be => 1
       change_penalty: 0.05                # Penalty to apply if motion is changing directions (L to R), must be >= 0
       non_straight_penalty: 1.05          # Penalty to apply if motion is non-straight, must be => 1
-      cost_penalty: 2.0                   # Penalty to apply to higher cost areas when adding into the obstacle map dynamic programming distance expansion heuristic. This drives the robot more towards the center of passages. A value between 1.3 - 3.5 is reasonable.
+      cost_penalty: 3.0                   # Penalty to apply to higher cost areas when adding into the obstacle map dynamic programming distance expansion heuristic. This drives the robot more towards the center of passages. A value between 1.3 - 3.5 is reasonable.
       rotation_penalty: 5.0               # Penalty to apply to in-place rotations, if minimum control set contains them
       retrospective_penalty: 0.015
       lookup_table_size: 20.0             # Size of the dubin/reeds-sheep distance window to cache, in meters.
@@ -285,8 +285,10 @@ smoother_server:
 
 behavior_server:
   ros__parameters:
-    costmap_topic: local_costmap/costmap_raw
-    footprint_topic: local_costmap/published_footprint
+    local_costmap_topic: local_costmap/costmap_raw
+    local_footprint_topic: local_costmap/published_footprint
+    global_costmap_topic: global_costmap/costmap_raw
+    global_footprint_topic: global_costmap/published_footprint #changed to add global
     cycle_frequency: 10.0
     behavior_plugins: ["spin", "backup", "drive_on_heading", "assisted_teleop", "wait"]
     spin:
@@ -329,10 +331,10 @@ velocity_smoother:
     smoothing_frequency: 20.0
     scale_velocities: False
     feedback: "OPEN_LOOP"
-    max_velocity: [0.15, 0.15, 0.1]
-    min_velocity: [-0.15, -0.15, -0.1]
-    max_accel: [0.3, 0.3, 3.0]
-    max_decel: [-0.3, -0.3, -3.0]
+    max_velocity: [0.17, 0.17, 0.1]
+    min_velocity: [-0.17, -0.17, -0.1]
+    max_accel: [1.0, 1.0, 3.0]
+    max_decel: [-1.0, -1.0, -3.0]
     odom_topic: "odom"
     odom_duration: 0.1
     deadband_velocity: [0.0, 0.0, 0.0]
