--- a/config/nav2_params.yaml
+++ b/config/nav2_params.yaml
@@ -149,8 +149,8 @@ local_costmap:
       width: 3
       height: 3
       resolution: 0.05
-      #robot_radius: 0.22
-      footprint: "[ [0.24, 0.24], [0.24, -0.24], [-0.24, -0.24], [-0.24, 0.24] ]"
+      #robot_radius: 0.28
+      footprint: "[ [0.25, 0.28], [0.25, -0.28], [-0.25, -0.28], [-0.25, 0.28] ]"
       plugins: ["static_layer","voxel_layer", "inflation_layer"]
       inflation_layer:
         plugin: "nav2_costmap_2d::InflationLayer"
@@ -189,8 +189,8 @@ global_costmap:
       global_frame: map
       robot_base_frame: base_footprint
       use_sim_time: false
-      #robot_radius: 0.22
-      footprint: "[ [0.24, 0.24], [0.24, -0.24], [-0.24, -0.24], [-0.24, 0.24] ]"
+      robot_radius: 0.28
+      #footprint: "[ [0.25, 0.28], [0.25, -0.28], [-0.25, -0.28], [-0.25, 0.28] ]"
       resolution: 0.05
       track_unknown_space: true
       plugins: ["static_layer", "obstacle_layer", "inflation_layer"]
