--- a/config/rear_cam_params .yaml
+++ b/config/rear_cam_params .yaml
@@ -3,12 +3,12 @@
       video_device: "/dev/video0"
       framerate: 30.0
       io_method: "mmap"
-      frame_id: "camera"
+      frame_id: "camera_link"
       pixel_format: "mjpeg2rgb"  # see usb_cam/supported_formats for list of supported formats
       av_device_format: "YUV422P"
       image_width: 640
       image_height: 480
-      camera_name: "rear_camera"
+      camera_name: "camera"
       camera_info_url: "package://usb_cam/config/camera_info.yaml"
       brightness: -1
       contrast: -1
