--- a/firmware/motor_driver/platformio.ini
+++ b/firmware/motor_driver/platformio.ini
@@ -8,11 +8,7 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:uno_r4_minima]
-platform = renesas-ra
-board = uno_r4_minima
+[env:esp32dev]
+platform = espressif32
+board = esp32dev
 framework = arduino
-platform_packages =
-  toolchain-gccarmnoneeabi@~1.90301.200702
-lib_deps =
-  alexandrehiroyuki/MovingAveragePlus@^4.4.1
