--- a/config/slam.yaml
+++ b/config/slam.yaml
@@ -12,14 +12,14 @@ slam_toolbox:
     # ROS Parameters
     odom_frame: odom
     map_frame: map
-    base_frame: base_footprint
+    base_frame: base_link
     scan_topic: /scan
-    mode: mapping #localization
+    mode: localization
 
     # if you'd like to immediately start continuing a map at a given pose
     # or at the dock, but they are mutually exclusive, if pose is given
     # will use pose
-    #map_file_name: /home/pi/dec27
+    map_file_name: /home/pi/map_14_1_25
     map_start_pose: [0.0, 0.0, 0.0]
     #map_start_at_dock: true
 
