--- a/config/nav2_params_new.yaml
+++ b/config/nav2_params_new.yaml
@@ -30,7 +30,7 @@ controller_server:
     controller_frequency: 20.0
     costmap_update_timeout: 0.30
     min_x_velocity_threshold: 0.001
-    min_y_velocity_threshold: 0.5
+    min_y_velocity_threshold: 0.001
     min_theta_velocity_threshold: 0.001
     failure_tolerance: 0.3
     progress_checker_plugins: ["progress_checker"]
@@ -69,7 +69,6 @@ controller_server:
       vx_max: 0.3
       vx_min: -0.3
       vy_max: 0.3
-      vy_min: -0.3
       wz_max: 0.2
       iteration_count: 1
       prune_distance: 1.7
@@ -77,7 +76,7 @@ controller_server:
       temperature: 0.3
       gamma: 0.015
       motion_model: "Omni"
-      visualize: true
+      visualize: false
       regenerate_noises: true
       TrajectoryVisualizer:
         trajectory_step: 5
@@ -119,7 +118,7 @@ controller_server:
       PathAlignCritic:
         enabled: true
         cost_power: 1
-        cost_weight: 14.0
+        cost_weight: 16.0
         max_path_occupancy_ratio: 0.05
         trajectory_point_step: 4
         threshold_to_consider: 0.5
@@ -157,7 +156,14 @@ local_costmap:
       resolution: 0.05
       #robot_radius: 0.22
       footprint: "[ [0.23, 0.22], [0.23, -0.22], [-0.23, -0.22], [-0.23, 0.22] ]"
-      plugins: ["voxel_layer", "inflation_layer"]
+      plugins: ["obstacle_layer","voxel_layer", "inflation_layer"]
+      obstacle_layer:
+        plugin: "nav2_costmap_2d::ObstacleLayer"
+        enabled: True
+        observation_sources: scan
+        footprint_clearing_enabled: true
+        max_obstacle_height: 2.0
+        combination_method: 1
       inflation_layer:
         plugin: "nav2_costmap_2d::InflationLayer"
         cost_scaling_factor: 3.0
@@ -244,8 +250,8 @@ planner_server:
     GridBased:
       plugin: "nav2_navfn_planner::NavfnPlanner"
       tolerance: 0.5
-      use_astar: false
-      allow_unknown: true
+      use_astar: true
+      allow_unknown: false
 
 smoother_server:
   ros__parameters:
@@ -299,10 +305,10 @@ velocity_smoother:
     smoothing_frequency: 20.0
     scale_velocities: False
     feedback: "OPEN_LOOP"
-    max_velocity: [0.15, 0.0, 0.2] 
-    min_velocity: [-0.15, 0.0, -0.2]
-    max_accel: [0.3, 0.3, 0.3]
-    max_decel: [-0.3, -0.3, -0.3]
+    max_velocity: [0.15, 0.15, 0.1] 
+    min_velocity: [-0.15, -0.15, -0.1]
+    max_accel: [0.3, 0.3, 0.1]
+    max_decel: [-0.3, -0.3, -0.1]
     odom_topic: "odom"
     odom_duration: 0.1
     deadband_velocity: [0.0, 0.0, 0.0]
@@ -329,7 +335,7 @@ collision_monitor:
       time_before_collision: 1.2
       simulation_time_step: 0.1
       min_points: 6
-      visualize: False
+      visualize: True
       enabled: True
     observation_sources: ["scan"]
     scan:
