--- a/config/slam.yaml
+++ b/config/slam.yaml
@@ -19,7 +19,7 @@ slam_toolbox:
     # if you'd like to immediately start continuing a map at a given pose
     # or at the dock, but they are mutually exclusive, if pose is given
     # will use pose
-    map_file_name: /home/pi/map_14_1_25
+    map_file_name: /home/pi/mar_22
     map_start_pose: [0.0, 0.0, 0.0]
     #map_start_at_dock: true
 
