more joint functions

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,7 +20,7 @@ install(DIRECTORY config scripts launch maps mesh urdf
 install(PROGRAMS
   scripts/controller.py
   scripts/move_robot.py
-  scripts/old_controller.py
+  scripts/torso_joint.py
   scripts/new_controller.py
   scripts/odom.py
   scripts/odom_50hz.py
