--- a/firmware/robbie_servo_esp/platformio.ini
+++ b/firmware/robbie_servo_esp/platformio.ini
@@ -12,4 +12,5 @@
 platform = espressif32
 board = esp32dev
 framework = arduino
-upload_port = /dev/esp
+lib_extra_dirs = ~/Documents/Arduino/libraries
+upload_port = /dev/head
